--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "can-hot",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Hot reloading for canjs components",
   "main": "can-hot.js",
   "files": [
@@ -32,14 +32,18 @@
   },
   "homepage": "https://github.com/whitecolor/can-hot#readme",
   "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "can": "^2.3.11",
     "jquery": "^2.1.4",
     "steal": "^0.13.2",
     "steal-hmr": "^0.1.0",
-    "watchalive": "^1.1.3",
+    "watchalive": "^1.1.4",
     "watchalive-less": "^0.1.0"
   },
   "system": {
+    "baseURL": "app",
     "npmAlgorithm": "flat",
     "transpiler": "babel",
     "babelOptions": {
@@ -48,13 +52,26 @@
     "map": {},
     "npmIgnore": [
       "watchalive",
-      "watchalive-less"
+      "watchalive-less",
+      "babel-core",
+      "babel-preset-es2015",
+      "babel-preset-stage-0"
     ]
   },
   "watchalive": {
     "data": true,
+    "skip": ["node_modules/**", "package.json"],
     "plugin": [
-      "less"
+      "less",
+      ["*.js",
+        "babel-core",
+        {
+          "presets": [
+            "es2015",
+            "stage-0"
+          ]
+        }
+      ]
     ]
   }
 }
