--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "can-hot",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Hot reloading for canjs components",
   "main": "can-hot.js",
   "files": [
@@ -11,7 +11,8 @@
     "package.json"
   ],
   "scripts": {
-    "start": "opener http://localhost:7000 && watchalive",
+    "start": "watchalive",
+    "start-open": "opener http://localhost:7000 && watchalive",
     "test": "standard"
   },
   "repository": {
@@ -54,7 +55,8 @@
       "watchalive-less",
       "babel-core",
       "babel-preset-es2015",
-      "babel-preset-stage-0"
+      "babel-preset-stage-0",
+      "opener"
     ]
   },
   "watchalive": {
