--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "babel-core": "^6.4.5",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "can": "^2.3.11",
-    "jquery": "^2.1.4",
+    "can": "2.3.11",
+    "jquery": "2.1.4",
     "opener": "^1.4.1",
     "steal": "^0.13.2",
     "steal-hmr": "^0.1.0",
@@ -60,6 +60,7 @@
     ]
   },
   "watchalive": {
+  "debug": true,
     "data": true,
     "skip": [
       "node_modules/**",
